--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,8 @@ defaults:
 # Profile settings (update these)
 author_name: "kevin"
 author_bio: |-
-  i write software with purpose. for me, building is about shaping ideas into tools that make life simpler and more meaningful. each project is a reflection of curiosity, imagination, and the pursuit of happiness.
+  i write software with purpose. for me, building is about shaping ideas into tools that make life simpler and more meaningful.
+  each project is a reflection of curiosity, imagination, and the pursuit of happiness.
 
   this space is where i share what i create — ongoing explorations of how technology can align with thought, design, and intent.
 email: "hello@example.com"
